# haskell-fingerd

./: LICENSE  fingerd.cabal
src/: Debug.hs  Main.hs
src/Lib/: Database.hs  db.hs
