name:                fingerd
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/stephenpascoe/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen Pascoe
maintainer:          Stephen.Pascoe@nanoporetech.com
copyright:           BSD3
category:            unknown
build-type:          Simple
cabal-version:       >=1.10

executable fingerd
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
